웹사이트 완성

--- a/2.html
+++ b/2.html
@@ -13,7 +13,7 @@
     </ol>
     
 <h2>원빈</h2>
-<p><img src="원빈.webp" height="450"></p>
+<p><img src="w.jpg" height="450"></p>
 <p>이름: 박원빈</p>
 <p>출생: 2002년 3월 2일</p>
 <p>SM엔터테인먼트 소속 7인조 보이그룹 RIIZE의 멤버.</p>
