--- a/1.html
+++ b/1.html
@@ -13,7 +13,7 @@
     </ol>
     
 <h2>성찬</h2>
-<p><img src="1.jpg" height="450"></p>
+<p><img src="j.jpg" height="450"></p>
 <p>이름: 정성찬</p>
 <p>출생: 2001년 9월 13일</p>
 <p>SM엔터테인먼트 소속 7인조 보이그룹 RIIZE의 멤버.</p>
